--- a/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
+++ b/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
@@ -93,8 +93,9 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/zan_iv"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
                 android:src="@drawable/icon_liked" />
 
             <TextView
@@ -116,14 +117,15 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/cai_iv"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
                 android:src="@drawable/icon_unliked" />
 
             <TextView
                 android:id="@+id/tv_unliked"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="5dp"
                 android:textColor="#4D4D4D"
                 android:textSize="10sp"
@@ -140,8 +142,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
                 android:src="@drawable/icon_comments" />
 
             <TextView
@@ -156,13 +158,13 @@
 
         <!--分享-->
         <ImageView
-           android:visibility="visible"
             android:id="@+id/share_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:src="@drawable/icon_share" />
+            android:src="@drawable/icon_share"
+            android:visibility="visible" />
 
     </LinearLayout>
 
