--- a/proj_duanyou/src/main/res/layout/fragment_tag.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_tag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,4 +19,12 @@
 
     </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 
-</LinearLayout>
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:text="删除"
+    android:visibility="gone"
+    android:layout_alignParentBottom="true"
+    android:background="@color/white"
+    android:gravity="center"/>
+</RelativeLayout>
