--- a/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
+++ b/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,170 +7,185 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <!--头部-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="10dp"
-            app:riv_corner_radius="6dp" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="15sp"
-            tools:text="佚名" />
-
-        <ImageView
-            android:id="@+id/iv_sex"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:scaleType="center"
-            tools:src="@drawable/icon_female" />
-    </LinearLayout>
-    <!--内容体-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:lineSpacingExtra="5dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
-            android:textSize="15sp"
-            tools:text="content" />
-
-        <FrameLayout
-            android:id="@+id/fl"
+        <!--头部-->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/content_iv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop" />
-
-            <cn.jzvd.JZVideoPlayerStandard
-                android:id="@+id/jz_video"
-                android:layout_width="match_parent"
-                android:layout_height="200dp" />
-
-        </FrameLayout>
-    </LinearLayout>
-    <!--底部-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-        <!--赞-->
-        <LinearLayout
-            android:id="@+id/zan_ll"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/zan_iv"
-                android:layout_width="23dp"
-                android:layout_height="23dp"
-                android:src="@drawable/icon_liked" />
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="10dp"
+                app:riv_corner_radius="6dp" />
 
             <TextView
-                android:id="@+id/zan_tv"
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textColor="#4D4D4D"
-                android:textSize="10sp"
-                tools:text="1" />
-        </LinearLayout>
-        <!--踩-->
-        <LinearLayout
-            android:id="@+id/cai_ll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+                android:layout_gravity="center_vertical"
+                android:textSize="15sp"
+                tools:text="佚名" />
 
             <ImageView
-                android:id="@+id/cai_iv"
-                android:layout_width="23dp"
-                android:layout_height="23dp"
-                android:src="@drawable/icon_unliked" />
-
-            <TextView
-                android:id="@+id/tv_unliked"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:id="@+id/iv_sex"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:textColor="#4D4D4D"
-                android:textSize="10sp"
-                tools:text="1" />
+                android:scaleType="center"
+                tools:src="@drawable/icon_female" />
         </LinearLayout>
-        <!--评论-->
+        <!--内容体-->
         <LinearLayout
-            android:id="@+id/comment_ll"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="23dp"
-                android:layout_height="23dp"
-                android:src="@drawable/icon_comments" />
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_comments"
+                android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textColor="#4D4D4D"
-                android:textSize="10sp"
-                tools:text="1" />
-        </LinearLayout>
+                android:layout_gravity="center_vertical"
+                android:lineSpacingExtra="5dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:textSize="15sp"
+                tools:text="content" />
 
-        <!--分享-->
-        <ImageView
-            android:id="@+id/share_iv"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_gravity="center_vertical"
+            <FrameLayout
+                android:id="@+id/fl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/content_iv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop" />
+
+                <cn.jzvd.JZVideoPlayerStandard
+                    android:id="@+id/jz_video"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+
+            </FrameLayout>
+        </LinearLayout>
+        <!--底部-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/icon_share"
-            android:visibility="visible" />
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <!--赞-->
+            <LinearLayout
+                android:id="@+id/zan_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/zan_iv"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:src="@drawable/icon_liked" />
+
+                <TextView
+                    android:id="@+id/zan_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#4D4D4D"
+                    android:textSize="10sp"
+                    tools:text="1" />
+            </LinearLayout>
+            <!--踩-->
+            <LinearLayout
+                android:id="@+id/cai_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/cai_iv"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:src="@drawable/icon_unliked" />
+
+                <TextView
+                    android:id="@+id/tv_unliked"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#4D4D4D"
+                    android:textSize="10sp"
+                    tools:text="1" />
+            </LinearLayout>
+            <!--评论-->
+            <LinearLayout
+                android:id="@+id/comment_ll"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:src="@drawable/icon_comments" />
+
+                <TextView
+                    android:id="@+id/tv_comments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="#4D4D4D"
+                    android:textSize="10sp"
+                    tools:text="1" />
+            </LinearLayout>
+
+            <!--分享-->
+            <ImageView
+                android:id="@+id/share_iv"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/icon_share"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@color/gray3" />
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@color/gray3" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/checked_tv"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="15dp"
+        android:visibility="gone"
+        android:background="@drawable/duanzi_selector"
+        android:layout_alignParentRight="true"/>
+</RelativeLayout>
