--- a/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
+++ b/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
@@ -170,7 +170,7 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:scaleType="centerInside"
-                        android:src="@drawable/icon_share" />
+                        android:background="@drawable/icon_share" />
 
                 </LinearLayout>
 
