--- a/proj_duanyou/src/main/res/layout/activity_main.xml
+++ b/proj_duanyou/src/main/res/layout/activity_main.xml
@@ -56,8 +56,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/id_activity_main_img_btn_dyou"
@@ -67,7 +66,6 @@
 
             <TextView
                 android:id="@+id/id_activity_main_tv_dyou"
-
                 android:layout_width="wrap_content"
                 android:layout_height="14dp"
                 android:layout_marginTop="2dp"
@@ -85,6 +83,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="5dp"
                 android:src="@drawable/more" />
 
         </LinearLayout>
@@ -96,8 +95,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/id_activity_main_img_btn_examain"
