段友-消息  无消息时状态

--- a/proj_duanyou/src/main/res/layout/fragment_message.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_message.xml
@@ -4,9 +4,30 @@
     android:layout_height="match_parent"
     tools:context="com.duanyou.lavimao.proj_duanyou.fragment.duanyou.MessageFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="message" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/message_tip" />
+
+        <TextView
+            android:id="@+id/search_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/search_bg"
+            android:paddingBottom="10dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:paddingTop="10dp"
+            android:text="搜一搜"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
 </FrameLayout>
