新增UI 消息-段友 好友请求 群列表  创建群 搜索群

--- a/proj_duanyou/src/main/res/layout/fragment_duanyou.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_duanyou.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.duanyou.lavimao.proj_duanyou.fragment.duanyou.DuanyouFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/duanyou_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="duanyou" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
