--- a/proj_duanyou/src/main/res/layout/activity_add_dy.xml
+++ b/proj_duanyou/src/main/res/layout/activity_add_dy.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true">
+    android:orientation="vertical">
 
     <include layout="@layout/common_title" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:paddingLeft="15dp"
-        android:textSize="14sp"
         android:background="@color/white"
-        android:hint="搜索段友昵称" />
+        android:hint="搜索段友昵称"
+        android:paddingLeft="15dp"
+        android:textSize="14sp" />
 </LinearLayout>
