--- a/proj_duanyou/src/main/res/values/styles.xml
+++ b/proj_duanyou/src/main/res/values/styles.xml
@@ -68,4 +68,8 @@
         <item name="android:layout_width">1dp</item>
         <item name="android:background">#E5E5E5</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
