--- a/proj_duanyou/src/main/res/layout/item_reply.xml
+++ b/proj_duanyou/src/main/res/layout/item_reply.xml
@@ -13,12 +13,6 @@
         android:textSize="14sp"
         tools:text="name" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:text=":"
-        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/reply_tv"
@@ -26,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:textSize="14sp"
-        tools:text="reply" />
+        tools:text=": reply" />
 
 </LinearLayout>
