--- a/proj_duanyou/src/main/res/layout/activity_main.xml
+++ b/proj_duanyou/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/id_activity_main_img_btn_dyou"
@@ -95,7 +96,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/id_activity_main_img_btn_examain"
