用户反馈，清除缓存，段友版本号，更换密码

--- a/proj_duanyou/src/main/res/layout/activity_login.xml
+++ b/proj_duanyou/src/main/res/layout/activity_login.xml
@@ -100,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:visibility="gone"
         android:layout_marginTop="20dp">
 
         <ImageView
