--- a/proj_duanyou/src/main/res/layout/fragment_check.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_check.xml
@@ -130,7 +130,7 @@
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/fuck1" />
+                        android:src="@drawable/bad_selector" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -163,7 +163,7 @@
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/good1" />
+                        android:src="@drawable/good_selector" />
 
                     <TextView
                         android:layout_width="wrap_content"
